--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ management.endpoint.health.group.custom.show-components=always
 management.endpoint.health.group.custom.show-details=always
 management.endpoint.health.group.custom.status.http-mapping.up=207
 
-management.endpoints.web.cors.allowed-origins=http://localhost:5173
-management.endpoints.web.cors.allowed-methods=GET
+#management.endpoints.web.cors.allowed-origins=http://localhost:5173
+#management.endpoints.web.cors.allowed-methods=GET
